{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 20,
  "lineage": "cb9c81c2-778d-d1cf-b2b8-4035778be31e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01605052-u-vm1-nic-1",
            "internal_domain_name_suffix": "2wlapvdisl4ehjnwyimtl1fexa.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-u-vm1-ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1"
              }
            ],
            "location": "canadacentral",
            "name": "n01605052-u-vm1-nic-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet1",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01605052-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01605052-w-vm1-nic",
            "internal_domain_name_suffix": "2wlapvdisl4ehjnwyimtl1fexa.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-w-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2"
              }
            ],
            "location": "canadacentral",
            "name": "n01605052-w-vm1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet2",
            "azurerm_virtual_network.network-vnet"
          ]
        },
        {
          "index_key": "n01605052-w-vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkInterfaces/n01605052-w-vm2-nic",
            "internal_domain_name_suffix": "2wlapvdisl4ehjnwyimtl1fexa.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01605052-w-vm2-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2"
              }
            ],
            "location": "canadacentral",
            "name": "n01605052-w-vm2-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "network-rg",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet2",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadacentral",
            "name": "network-nsg1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network-nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadacentral",
            "name": "network-nsg2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605052-u-vm1-pip-1",
            "fqdn": "n01605052-u-vm1-pip-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01605052-u-vm1-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-u-vm1-pip-1",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01605052-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605052-w-vm1-pip",
            "fqdn": "n01605052-w-vm1-pip.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01605052-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-w-vm1-pip",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        },
        {
          "index_key": "n01605052-w-vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01605052-w-vm2-pip",
            "fqdn": "n01605052-w-vm2-pip.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/publicIPAddresses/n01605052-w-vm2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01605052-w-vm2-pip",
            "resource_group_name": "network-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "n01605052@humber.ca",
              "Environment": "Lab",
              "Name": "Terraform-Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1",
            "name": "network_subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2",
            "name": "network_subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network-rg",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network-rg",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1",
            "network_security_group_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.network-nsg1",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet1",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2",
            "network_security_group_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network_subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.network-nsg2",
            "azurerm_resource_group.network-rg",
            "azurerm_subnet.network-subnet2",
            "azurerm_virtual_network.network-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d40796e5-9268-43fc-a5b6-c21935eca4b8",
            "id": "/subscriptions/cbb7d814-5676-40c4-9a70-ef502683805b/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadacentral",
            "name": "network-vnet",
            "resource_group_name": "network-rg"
          },
          "dependencies": [
            "azurerm_resource_group.network-rg"
          ]
        }
      ]
    }
  ]
}